--- a/section 5/bt_web_danang/1.html
+++ b/section 5/bt_web_danang/1.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Website giới thiệu đà nẵng</title>
 	<link rel="shortcut icon" type="" href="images/ghost.png">
-	<meta name="viewport" content="width=device-width, user-scalable=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -76,7 +76,7 @@
 						<li><a href="#">Giới thiệu về chúng tôi</a></li>
 						<li><a href="#">Thông tin thêm</a></li>
 						<li><a href="#">Các tua du lịch</a></li>
-						<li><a href="#">Abourt</a></li>
+						<li><a href="#">About</a></li>
 					</ul>
 				</div>
 			</div>
