--- a/section 5/example_1.html
+++ b/section 5/example_1.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>bai tap layout</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+	<meta name="viewport" content="width=device-width, user-scalable=no">
 </head>
 <body>
 	<div id="container">
