--- a/section 9/bt_javascript/bt1.html
+++ b/section 9/bt_javascript/bt1.html
@@ -39,7 +39,7 @@
                     <td><input type="button"  value="/" onclick="calculator.input.value += '/'"></td>
                 </tr>
                 <tr>
-                    <td><input type="button" value="BACKSPACE" onclick="calculator.input.value += 'back'"></td>
+                    <td><input type="button" value="BACKSPACE" onclick="calculator.input.value = ''"></td>
                     <td><input type="button" value="." onclick="calculator.input.value += '.'"></td>
                     <td><input type="button" value="M+" onclick="calculator.input.value "></td>
                     <td><input type="button" value="M-" onclick="calculator.input.value "></td>
