--- a/section 10/slide jquery/1.html
+++ b/section 10/slide jquery/1.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Bai tap 7 b</title>
-	<link rel="stylesheet" type="text/css" href="chung.css">
+	<title>Bai tap slide</title>
+	<link rel="shortcut icon" type="" href="images/ghost.png">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="chung.css">
 </head>
 <body>
 	<div id="content">
@@ -24,6 +25,7 @@
 		<img src="4.jpg">
 		<img src="5.jpg">
 	</div>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script type="text/javascript">
 		function slideSwitch(){
 			var $active = $(' #slideshow IMG.active');
