--- a/section 14/2.html
+++ b/section 14/2.html
@@ -3,16 +3,28 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Example-2</title>
+	<link rel="stylesheet" type="text/css" href="2.css">
 </head>
 <body>
-	<div align="center">
-		<textarea id="text"></textarea>
-	</div>
-	<div align="center">
-		<button class="button" onclick="inChu()">Submit</button>
-	</div>
-	<div align="center">
-		<p id="demo"></p>
+	<div class="container">
+		<div align="center">
+			<textarea id="text"></textarea>
+		</div>
+		<div align="center">
+			<button class="button" onclick="inChu()">Submit</button>
+		</div>
+		<div align="center" class="output">
+			<p id="demo"></p>
+		</div>
+
+		<div align="center">
+			<input id="dome2" type="" name="">
+		</div>
+
+		<div align="center">
+			<button>Search</button>
+		</div>
+	
 	</div>
 	<script type="text/javascript">
 		function inChu() {
